Refactor: disconnect logic

--- a/public/client.html
+++ b/public/client.html
@@ -20,12 +20,12 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/client.js"></script>
-    <script src="/utility/utility/game-room.js"></script>
-    <script src="/utility/utility/lobby.js"></script>
-    <script src="/utility/socket/game-room.js"></script>
-    <script src="/utility/socket/lobby.js"></script>
+    <script src="/utility/game-room.js"></script>
+    <script src="/utility/lobby.js"></script>
+    <script src="/socket/game-room.js"></script>
+    <script src="/socket/lobby.js"></script>
     <script>
-      accessToLobbySocket()
+      connectToLobbySocket()
     </script>
   </body>
 </html>
