Feat: change room setting

--- a/public/client.html
+++ b/public/client.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="/client.css" />
   </head>
   <body>
+    <audio id="bgm" loop>
+      <source src="/source/background_sound.mp3" type="audio/mpeg" />
+    </audio>
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" />
