Fix: complete structure

--- a/public/game_test.html
+++ b/public/game_test.html
@@ -35,7 +35,7 @@
       })
 
       socket.on('timer', (timeObj) => {
-        console.log(`timer: ${JSON.stringify(timeObj)}`)
+        //console.log(`timer: ${JSON.stringify(timeObj)}`)
       })
 
       socket.on('error', (msg) => {
