--- a/public/client.html
+++ b/public/client.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/client.css" />
   </head>
   <body>
-    <audio id="bgm" loop>
+    <audio id="bgm" controls>
       <source src="/source/background_sound.mp3" type="audio/mpeg" />
     </audio>
 
@@ -22,8 +22,8 @@
     <div id="right">
       <!-- 방 만들기 버튼 추가 -->
       <div id="lobbyTopContain">
-        <span class="lobbyTop">방 목록</span>
-        <span id="createGameRoomBtn" class="lobbyTop">방 만들기</span>
+        <span class="topBtn">방 목록</span>
+        <span id="createGameRoomBtn" class="topBtn">방 만들기</span>
       </div>
       <div id="gameEnteranceContain"></div>
 
