--- a/public/socket_test.html
+++ b/public/socket_test.html
@@ -67,6 +67,55 @@
         console.log(`error: ${JSON.stringify(err)}`)
       })
 
+      socket.on('complete start game', (game) => {
+        console.log(`game start: ${JSON.stringify(game)}`)
+        socket.emit('round start', roomId)
+      })
+
+      socket.on('round start', (roundWord) => {
+        console.log(`round start: ${JSON.stringify(roundWord)}`)
+        socket.emit('turn start', roomId)
+      })
+
+      socket.on('turn start', (turnObj) => {
+        console.log(`turn start: ${JSON.stringify(turnObj)}`)
+
+        if (turnObj.currentTurn === 0)
+          setTimeout(
+            () => socket.emit('chat', { roomId, message: '단어' }),
+            1000,
+          )
+      })
+
+      socket.on('round end', (roundObj) => {
+        console.log(`round end: ${JSON.stringify(roundObj)}`)
+        socket.emit('round start', roomId)
+      })
+
+      socket.on('timer', (timeObj) => {
+        //console.log(`timer: ${JSON.stringify(timeObj)}`)
+      })
+
+      socket.on('error', (msg) => {
+        console.log(`error: ${msg}`)
+      })
+
+      socket.on('chat', (msg) => {
+        console.log(`chat: ${JSON.stringify(msg)}`)
+      })
+
+      socket.on('say word', (res) => {
+        console.log(`say word: ${JSON.stringify(res)}`)
+        socket.emit('turn start', roomId)
+      })
+
+      socket.on('game end', (res) => {
+        console.log(`game end, ranking: ${JSON.stringify(res)}`)
+        socket.disconnect()
+      })
+
+      socket.emit('game start', roomId)
+
       socket.emit('load room list')
       socket.emit('create room', roomConfig)
 
