--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <button id="disconnect" onclick="socket.disconnect()"></button>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://localhost:4000/socket.io/socket.io.js"></script>
     <script>
       let gameEnded = false
       let roundword = ''
@@ -29,7 +29,9 @@
         roundTimeLimit: 60 * 1000,
       }
 
-      const socket = io('http://localhost:4000')
+      const socket = io('http://localhost:4000', {
+        withCredentials: true,
+      })
 
       socket.on('complete load room list', (res) => {
         console.log(`load room list: ${JSON.stringify(res)}`)
