Feat: change room config

--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <button id="disconnect" onclick="socket.disconnect()"></button>
-    <script src="http://localhost:7000/socket.io/socket.io.js"></script>
+    <script src="http://localhost:4000/socket.io/socket.io.js"></script>
     <script>
       let gameEnded = false
       let roundword = ''
@@ -29,15 +29,7 @@
         roundTimeLimit: 60 * 1000,
       }
 
-      const newRoomConfig = {
-        title: '변경된 방제목',
-        password: '',
-        maxUserCount: 2,
-        maxRound: 6,
-        roundTimeLimit: 30 * 1000,
-      }
-
-      const socket = io('http://localhost:7000', {
+      const socket = io('http://localhost:4000', {
         withCredentials: true,
       })
 
@@ -47,6 +39,10 @@
 
       socket.on('load new room', (res) => {
         console.log(`load new room: ${JSON.stringify(res)}`)
+      })
+
+      socket.on('update room config', (res) => {
+        console.log(`update room config: ${JSON.stringify(res)}`)
       })
 
       socket.on('destroy room', (res) => {
