Fix: change information type when change room config

--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -45,6 +45,10 @@
         console.log(`update room config: ${JSON.stringify(res)}`)
       })
 
+      socket.on('update room member count', (res) => {
+        console.log(`update room member count: ${JSON.stringify(res)}`)
+      })
+
       socket.on('destroy room', (res) => {
         console.log(`destroy room: ${JSON.stringify(res)}`)
       })
