Feat: add change room config, update room member count feature (#60)
* Feat: emit load game and destory room  to client

* Feat: add key name roomId

* Feat: add key name roomId

* Feat: change room config

* Feat: change room config

* Style: erase blank

* Fix: change information type when change room config

* Feat: update user count

* Fix: emit data type

* Rename: validation.js

* Rename: validation.js

* Refactor: fucntion name

--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -41,6 +41,14 @@
         console.log(`load new room: ${JSON.stringify(res)}`)
       })
 
+      socket.on('update room config', (res) => {
+        console.log(`update room config: ${JSON.stringify(res)}`)
+      })
+
+      socket.on('update room member count', (res) => {
+        console.log(`update room member count: ${JSON.stringify(res)}`)
+      })
+
       socket.on('destroy room', (res) => {
         console.log(`destroy room: ${JSON.stringify(res)}`)
       })
@@ -133,6 +141,10 @@
 
       socket.on('change room owner', (res) => {
         socket.emit('load room')
+      })
+
+      socket.on('complete change room config', (res) => {
+        console.log(`change room config: ${JSON.stringify(res)}`)
       })
 
       socket.on('error', (err) => {
