--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -76,7 +76,7 @@
         console.log(`load room: ${JSON.stringify(res)}`)
       })
 
-      socket.on('complete join room', (res) => {
+      socket.on('complete join room', () => {
         socket.emit('load room')
         socket.emit('switch ready state', true)
       })
