Fix: validation logic

--- a/packages/kkujjang-api-server/public/socket_test.html
+++ b/packages/kkujjang-api-server/public/socket_test.html
@@ -37,8 +37,9 @@
 
       const setUpSocket = async () => {
         socket = await io('http://localhost:4000', {
+          reconnection: false,
           extraHeaders: {
-            sessionId: //세션id
+            sessionId: sessionId.value,
           },
         })
 
